--- a/html/footer.html
+++ b/html/footer.html
@@ -1,6 +1,6 @@
 {{ define "html/footer.html"}}
 <footer>
-    <a href="https://github.com/#">powered by gopherbb</a>
+    <a href="https://github.com/0sm1les/gopherbb">powered by gopherbb</a>
 </footer>
 </html>
 {{ end }}
