added config option for registration fixed margin in .post

--- a/html/login.html
+++ b/html/login.html
@@ -14,7 +14,9 @@
     <div class="error">{{ . }}</div>
     {{end}}
     </fieldset>
+    {{ if ne .Registration "closed" }}
     <a href="/register">register</a>
+    {{ end }}
 </form>
 </div>
 </div>
