started to implement custom colors

--- a/html/settings.html
+++ b/html/settings.html
@@ -32,6 +32,25 @@
                 <div id="bio-form-feedback"></div>
             </fieldset>
         </form>
+        <form hx-post="/user/settings/theme" hx-swap="innerHTML" hx-target="#theme-form-feedback">
+            <fieldset>
+                <legend>custom theme</legend>
+                <label>Primary 1
+                    <input name="primary-1" type="color" value="#{{ .Userinfo.Theme.Primary1 }}">
+                </label>
+                <label>Primary 2
+                    <input name="primary-2" type="color" value="#{{ .Userinfo.Theme.Primary2 }}">
+                </label>
+                <label>background 1
+                    <input name="background-1" type="color" value="#{{ .Userinfo.Theme.Background1 }}">
+                </label>
+                <label>background 2
+                    <input name="background-2" type="color" value="#{{ .Userinfo.Theme.Background2 }}">
+                </label>
+                <button>set</button>
+                <div id="theme-form-feedback"></div>
+            </fieldset>
+        </form>
     </div>
 </div>
 {{ end }}
