--- a/html/user-posts.html
+++ b/html/user-posts.html
@@ -15,7 +15,7 @@
         {{ else }}
         <h3><a href="/section/{{ .Section }}/{{ .Pid }}/{{ .Title }}">{{ .Title }}</a></h3>
         {{ end }}
-        <h5>By:<a href="/user/{{ .User.Username }}"><span style="color: #{{ .User.User_fg_color }}; text-shadow: 1px 1px 5px #{{ .User.User_bg_color }};" >{{ .User.Username }}</span></a> On:{{ .Time_formatted }}</h5>
+        <div class="credit">By:<a href="/user/{{ .User.Username }}"><span style="color: #{{ .User.User_fg_color }}; text-shadow: 1px 1px 5px #{{ .User.User_bg_color }};" >{{ .User.Username }}</span></a> On:{{ .Time_formatted }}</div>
     </div>
     {{ end }}
 </div>
