--- a/html/unauth_header.html
+++ b/html/unauth_header.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>{{ .Title }}</title>
-    <link rel="stylesheet" href="/custom.css">
+    <link rel="stylesheet" href="/gopherbb.css">
     <script src="https://unpkg.com/htmx.org@1.9.6" integrity="sha384-FhXw7b6AlE/jyjlZH5iHa/tTe9EpJ1Y55RjcgPbjeWMskSxZt1v9qkxLJWNJaGni" crossorigin="anonymous"></script>
 </head>
     <header>
