--- a/html/settings.html
+++ b/html/settings.html
@@ -36,16 +36,16 @@
             <fieldset>
                 <legend>custom theme</legend>
                 <label>Primary 1
-                    <input name="primary-1" type="color" value="#{{ .Userinfo.Theme.Primary1 }}">
+                    <input name="primary-1" type="color" value="#{{ .Userinfo.Theme.Primary_text }}">
                 </label>
                 <label>Primary 2
-                    <input name="primary-2" type="color" value="#{{ .Userinfo.Theme.Primary2 }}">
+                    <input name="primary-2" type="color" value="#{{ .Userinfo.Theme.Secondary_text }}">
                 </label>
                 <label>background 1
-                    <input name="background-1" type="color" value="#{{ .Userinfo.Theme.Background1 }}">
+                    <input name="background-1" type="color" value="#{{ .Userinfo.Theme.Background }}">
                 </label>
                 <label>background 2
-                    <input name="background-2" type="color" value="#{{ .Userinfo.Theme.Background2 }}">
+                    <input name="background-2" type="color" value="#{{ .Userinfo.Theme.Border }}">
                 </label>
                 <button>set</button>
                 <div id="theme-form-feedback"></div>
